Adding OPA Gatekeeper

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,5 @@
 disaster-recovery/etcd-split-brain/cluster.rkestate
 disaster-recovery/etcd-split-brain/kube_config_cluster.yml
 disaster-recovery/etcd-split-brain/random-*
+disaster-recovery/broken-opa-gatekeeper/cluster.rkestate
+disaster-recovery/broken-opa-gatekeeper/kube_config_cluster.yml
