Adding Recovering from power outage

--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,5 @@ disaster-recovery/broken-kube-ca/kube_config_cluster.yml
 disaster-recovery/rebuild-from-scratch/cluster.rkestate
 disaster-recovery/rebuild-from-scratch/kube_config_cluster.yml
 disaster-recovery/rebuild-from-scratch/cluster.yml_mod
+disaster-recovery/complete-power-outage/cluster.rkestate
+disaster-recovery/complete-power-outage/kube_config_cluster.yml
