--- a/disaster-recovery/broken-kube-ca/deployment-default-sa.yaml
+++ b/disaster-recovery/broken-kube-ca/deployment-default-sa.yaml
@@ -5,7 +5,7 @@ metadata:
   labels:
     app: swiss-army-knife
   name: swiss-army-knife
-  namespace: kube-system
+  namespace: swiss-army-knife
 spec:
   replicas: 1
   selector:
