--- a/disaster-recovery/broken-opa-gatekeeper/test-deployment.yaml
+++ b/disaster-recovery/broken-opa-gatekeeper/test-deployment.yaml
@@ -1,15 +1,15 @@
+---
 apiVersion: apps/v1
 kind: Deployment
 metadata:
   labels:
-    app: hello-world
-  name: hello-world
-  namespace: default
+    app: swiss-army-knife
+  name: swiss-army-knife
 spec:
   replicas: 3
   selector:
     matchLabels:
-      app: hello-world
+      app: swiss-army-knife
   strategy:
     rollingUpdate:
       maxSurge: 1
@@ -18,26 +18,10 @@ spec:
   template:
     metadata:
       labels:
-        app: hello-world
+        app: swiss-army-knife
     spec:
       containers:
-      - image: rancher/hello-world
-        imagePullPolicy: Always
-        name: hello-world
-        ports:
-        - containerPort: 80
-          protocol: TCP
+      - image: rancherlabs/swiss-army-knife
+        imagePullPolicy: IfNotPresent
+        name: swiss-army-knife
       restartPolicy: Always
----
-apiVersion: v1
-kind: Service
-metadata:
-  name: hello-world
-  namespace: default
-spec:
-  ports:
-  - port: 80
-    protocol: TCP
-    targetPort: 80
-  selector:
-    app: hello-world
